# rust-bugreporter

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml-example  default.nix  shell.nix
src/: config.rs  github.rs  main.rs  wizard.rs
