[package]
name = "bug-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7.3", package = "gtk4" }
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
mac_address = "1.1"
hostname = "0.3"
octocrab = "0.43"
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
base64 = "0.21"
chrono = "0.4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
png = "0.17"
http = "1.0.0"
secrecy = "0.10.3"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
bytes = "1.0"
gdk-pixbuf = "0.18"
hyper-util = "0.1.3"
either = "1.13.0"
mitosis = "0.1.1"
hyper-rustls = { version = "0.27.0", optional = true, default-features = false, features = [
    "http1",
    "logging",
    "native-tokio",
    "tls12",
] }
[build-dependencies]
pkg-config = "0.3.27"

[features]
default = [
    "rustls",
]
rustls = ["hyper-rustls"]
